tests/ui/asm/ice-bad-err-span-in-template-129503.stderr
error: invalid asm template string: unmatched `}` found
  --> $DIR/ice-bad-err-span-in-template-129503.rs:12:10
   |
LL |     asm!(concat!(r#"lJð¿Ã†ï¿½.ð¿ï¿½"#, "r} {}"));
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unmatched `}` in asm template string
   |
   = note: if you intended to print `}`, you can escape it using `}}`

error: invalid asm template string: unmatched `}` found
  --> $DIR/ice-bad-err-span-in-template-129503.rs:18:10
   |
LL |     asm!(concat!("abc", "r} {}"));
   |          ^^^^^^^^^^^^^^^^^^^^^^^ unmatched `}` in asm template string
   |
   = note: if you intended to print `}`, you can escape it using `}}`

error: invalid asm template string: unmatched `}` found
  --> $DIR/ice-bad-err-span-in-template-129503.rs:24:19
   |
LL |     asm!("abc", "r} {}");
   |                   ^ unmatched `}` in asm template string
   |
   = note: if you intended to print `}`, you can escape it using `}}`

error: aborting due to 3 previous errors

